--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Music Website</title>
        <link rel = "stylesheet" href="style.css"> 
-      <meta name=""viewport" content="width=device-width, initial-scale=1.0">
+      <meta name=""viewport" content="width=device-width, initial-scale=1.0, shrink-to fit=no">
     </head>
     <body>
         
