--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">SPECIFICATIONS</a></li>
+                    <li><a href="#">MESSAGES</a></li>
                     <li><a href="#">PRODUCTS</a></li>
                     <li><a href="#">CONNECT</a></li>
                 </ul>
@@ -22,11 +22,11 @@
 
             <div class="content">
                 <div class="left-col">
-                    <h1>THE<br> REAL <br> SOUND</h1>
+                    <h1>THE<br> MESSAGE <br>FOR LIFE</h1>
                 </div>
                 <div class="right-col">
                     <p>Click Here To Listen</p>
-                    <img src="media/unnamed (1).png"  id="icon">
+                    <img src="media/unnamed.png"  id="icon">
                 </div>
                 
             </div>
